--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "borzyak-wedding",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Boyrziak.github.io/",
+  "homepage": "https://Boyrziak.github.io/#",
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
@@ -15,6 +15,7 @@
     "classnames": "^2.3.2",
     "gh-pages": "^5.0.0",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.12.1",
